Set baseline to Java 17 (#3116)
* Set default release version to 17
* Enable Error prone with Nullaway
* Enable Checkstyle
* Update dependencies