@@ -5,6 +5,7 @@ import io.cucumber.core.options.CurlOption;
 import io.cucumber.plugin.ColorAware;
 import io.cucumber.plugin.ConcurrentEventListener;
 import io.cucumber.plugin.event.EventPublisher;
+import org.jspecify.annotations.Nullable;
 
 import java.io.IOException;
 import java.util.Map;
@@ -15,7 +16,7 @@ import static io.cucumber.core.options.Constants.PLUGIN_PUBLISH_URL_PROPERTY_NAM
 public final class PublishFormatter implements ConcurrentEventListener, ColorAware {
 
     /**
-     * Where to publishes messages by default
+     * Where to publish messages by default
      */
     public static final String DEFAULT_CUCUMBER_MESSAGE_STORE_URL = "https://messages.cucumber.io/api/reports -X GET";
 
@@ -45,18 +46,18 @@ public final class PublishFormatter implements ConcurrentEventListener, ColorAwa
         urlReporter.setMonochrome(monochrome);
     }
 
-    private static CurlOption createCurlOption(String token) {
+    private static CurlOption createCurlOption(@Nullable String token) {
         // Note: This only includes properties from the environment and
         // cucumber.properties. It does not include junit-platform.properties
         // Fixing this requires an overhaul of the plugin system.
         Map<String, String> properties = CucumberProperties.create();
         String url = properties.getOrDefault(PLUGIN_PUBLISH_URL_PROPERTY_NAME, DEFAULT_CUCUMBER_MESSAGE_STORE_URL);
         if (token != null) {
-            url += String.format(" -H 'Authorization: Bearer %s'", token);
+            url += " -H 'Authorization: Bearer %s'".formatted(token);
         }
         String proxy = properties.get(PLUGIN_PUBLISH_PROXY_PROPERTY_NAME);
         if (proxy != null) {
-            url += String.format(" -x '%s'", proxy);
+            url += " -x '%s'".formatted(proxy);
         }
         return CurlOption.parse(url);
     }
