@@ -29,11 +29,14 @@ class CoreHookDefinition {
             this.tagExpression = TagExpressionParser.parse(delegate.getTagExpression());
         } catch (TagExpressionException tee) {
             throw new IllegalArgumentException(
-                String.format("Invalid tag expression at '%s'", delegate.getLocation()),
-                tee);
+                "Invalid tag expression at '%s'".formatted(
+                    delegate.getLocation()), //
+                tee //
+            );
         }
     }
 
+    @SuppressWarnings("deprecation")
     static CoreHookDefinition create(HookDefinition hookDefinition, Supplier<UUID> uuidGenerator) {
         // Ideally we would avoid this by keeping the scenario scoped
         // glue in a different bucket from the globally scoped glue.
@@ -75,7 +78,12 @@ class CoreHookDefinition {
         return delegate.getHookType();
     }
 
-    static class ScenarioScopedCoreHookDefinition extends CoreHookDefinition implements ScenarioScoped {
+    Optional<SourceReference> getDefinitionLocation() {
+        return delegate.getSourceReference();
+    }
+
+    @SuppressWarnings("deprecation")
+    static final class ScenarioScopedCoreHookDefinition extends CoreHookDefinition implements ScenarioScoped {
 
         private ScenarioScopedCoreHookDefinition(UUID id, HookDefinition delegate) {
             super(id, delegate);
@@ -83,15 +91,11 @@ class CoreHookDefinition {
 
         @Override
         public void dispose() {
-            if (delegate instanceof ScenarioScoped) {
-                ScenarioScoped scenarioScoped = (ScenarioScoped) delegate;
+            if (delegate instanceof ScenarioScoped scenarioScoped) {
                 scenarioScoped.dispose();
             }
         }
 
     }
 
-    Optional<SourceReference> getDefinitionLocation() {
-        return delegate.getSourceReference();
-    }
 }
